--- a/FrontEnd/src/app/profile-details/profile-details.component.html
+++ b/FrontEnd/src/app/profile-details/profile-details.component.html
@@ -2,8 +2,8 @@
 </button>
 
 <div class="shell">
-    <div id="pdf">
-    <qr-code id="pdf" class="qrcode" [value]=href [size]=90></qr-code>
+    <div id="profileQR">
+    <qr-code id="profileQR" class="qrcode" [value]=href [size]=90></qr-code>
 
     <div class="profile-details">  
     
