--- a/FrontEnd/src/app/QRDownload-page/QRDownload-page.component.html
+++ b/FrontEnd/src/app/QRDownload-page/QRDownload-page.component.html
@@ -1,16 +1,26 @@
 <script src="QRDownload.js"></script>
 <div class="shell">
-    <div class="form-group">
+    <div class="form-group text-style">
       <div class="row">
          <div class="col-4">
+          </div>
+          <div class="col-4">
           <div class="QRDownload-page">
               <span class="helper"></span>
           </div>
-          <div class="vertical-center container ">
-          <button class="btn btn-primary"  style="margin-right: 5%;" (click)="PreviewQRCodeDiv()">Preview/print QR code</button>
-          <button class="btn btn-primary"   style="margin-right: 5% " (click)="saveDiv()">Download QR code</button>
+          <br/>
+          <div class="vertical-center container">
+            <div>
+              <qr-code id="pdf" class="qrcode" value=[d42b96db-2334-4242-bcdf-abb17162e190] [size]=90></qr-code>
+            </div>
+            <br/>
+          
         </div>
         </div>
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-primary"  style="margin-right: 5%;" (click)="PreviewQRCodeDiv()">Preview/print QR code</button>
+            <button class="btn btn-primary"   style="margin-right: 5% " (click)="saveDiv()">Download QR code</button>
+          </div>
       </div>
    </div>
 </div>
