Werkende branch qr-code scannen voor nieuwe quest

--- a/FrontEnd/src/app/QRDownload-page/QRDownload-page.component.html
+++ b/FrontEnd/src/app/QRDownload-page/QRDownload-page.component.html
@@ -11,8 +11,11 @@
           <br/>
           <div class="vertical-center container">
             <div>
-              <qr-code id="pdf" class="qrcode" value=[d42b96db-2334-4242-bcdf-abb17162e190] [size]=90></qr-code>
+              <p>qr-code assignen</p>
+              <qr-code id="pdf" class="qrcode" value=[6c9759be-5a8f-4538-9d91-6a06bbfedc66] [size]=255></qr-code>
             </div>
+            <div>qr-code completen</div>
+            <qr-code id="pdf" class="qrcode" value="6c9759be-5a8f-4538-9d91-6a06bbfedc66 complete" [size]=255></qr-code>
             <br/>
           
         </div>
