--- a/FrontEnd/src/app/quests/quests.component.html
+++ b/FrontEnd/src/app/quests/quests.component.html
@@ -25,7 +25,7 @@
         <button
           class="accordion-scan-btn"
           type="button"
-          (click)="ScanQRBtnClick(quest.id)">
+          (click)="ScanQRBtnClick(quest.id , quest.title)">
           Scan QR
         </button>
         <div style="align-self: flex-end; color: #5865F2">{{quest.points}}</div>
