--- a/FrontEnd/src/app/Scanner/scanner-modal.component.html
+++ b/FrontEnd/src/app/Scanner/scanner-modal.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Scan QR Code</h2>
-<div>
+<div class="modal-container">
   <div class="scan-dropdown">
     <mat-form-field>
       <mat-label>Choose Cam</mat-label>
