--- a/FrontEnd/src/app/header/header.component.css
+++ b/FrontEnd/src/app/header/header.component.css
@@ -11,6 +11,7 @@
 .logodiv{
     display: inline-block;
     height: 100%;
+    position: relative;
 }
 
 .logo{
@@ -55,5 +56,9 @@
     width: 120px;
     border-radius: 15px;
     z-index: 1;
+}
+
+.confetti-fx {
+  position: relative;
 }
 
