--- a/FrontEnd/src/app/header/header.component.html
+++ b/FrontEnd/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="header text-center">
-    <div class="logodiv">
-        <img class="logo" src="./assets/pictures/Taxmodel_logo.jpg" alt="logo"/>
+    <div class="logodiv" id="logo-div">
+      <img class="logo" src="./assets/pictures/Taxmodel_logo.jpg" alt="logo" (click)="ClickToConfetti()">
     </div>
     <div class="pillshell">
         <a class="button pill" routerLink="/quests" routerLinkActive="activepill">Quests</a>
