--- a/FrontEnd/src/app/Scanner/Pop-up-error.html
+++ b/FrontEnd/src/app/Scanner/Pop-up-error.html
@@ -1,5 +1,6 @@
 <div class="error-dialog">
 An error has occured
+<div class="div-questtitle">{{Error}}</div>
 <div class="div-close-error">
 <mat-dialog-actions>
     <button mat-dialog-close class="dialog-close">x</button>
